[gd_scene load_steps=9 format=3 uid="uid://cu2r751bje6jd"]

[ext_resource type="Script" path="res://Common/victory_manager.gd" id="1_5q4fe"]
[ext_resource type="PackedScene" uid="uid://dmm6nlf25d2ip" path="res://UI/Timelapse/timelapse_overlay.tscn" id="2_wvadl"]
[ext_resource type="Texture2D" uid="uid://dis3prxno72qb" path="res://BackgroundObjects/Tree/sapling.png" id="3_6kjut"]
[ext_resource type="Texture2D" uid="uid://c4xwv0upvbaps" path="res://BackgroundObjects/Tree/tree_tussenstuk.png" id="4_rrd27"]
[ext_resource type="Texture2D" uid="uid://wvoply6hou73" path="res://BackgroundObjects/Tree/boom.png" id="4_wshsr"]

[sub_resource type="Animation" id="Animation_ra5h7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tree0:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tree1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tree2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kdwom"]
resource_name = "growtree"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tree0:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tree1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tree2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:currentAlpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:nextAlpha")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lm3h3"]
_data = {
"RESET": SubResource("Animation_ra5h7"),
"growtree": SubResource("Animation_kdwom")
}

[node name="VictoryManager" type="Node2D"]
script = ExtResource("1_5q4fe")

[node name="DEBUG" type="Camera2D" parent="."]

[node name="DesiredSeedLocation (1)" type="Marker2D" parent="."]
position = Vector2(0, 220)

[node name="DesiredTreeLocationOnGameStart (3)" type="Marker2D" parent="."]
position = Vector2(-400, 800)

[node name="SeedLocation (4)" type="Marker2D" parent="."]
position = Vector2(-350, -200)

[node name="timelapse_overlay" parent="." instance=ExtResource("2_wvadl")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lm3h3")
}

[node name="Tree0" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, 180)
scale = Vector2(3, 3)
texture = ExtResource("3_6kjut")

[node name="Tree1" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -10)
scale = Vector2(3, 3)
texture = ExtResource("4_rrd27")

[node name="Tree2" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -320)
scale = Vector2(3, 3)
texture = ExtResource("4_wshsr")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
